# ARM-Migration-Demo

./: .dockerignore  .gitignore  ARM_MIGRATION_SUMMARY.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run-docker.sh  setup.sh
_codeql_build_dir/: ARMCPUDetector  CMakeCache.txt  CPUDetector  Makefile  cmake_install.cmake
include/: arch_detect.h  cpu_info.h  gui.h
src/: cpu_info.cpp  gui.cpp  main.cpp
